packages/lustre-v6.6.103.3/test/should_fail/clock/inonout.lus

-- we cannot have an input clocked on an output
extern node inonout( a : bool; b : bool when c ) returns (c : bool);
